# siren

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  dependencies.cmake  uncrustify.cfg
core/: CMakeLists.txt
core/src/: Gltf.hpp  GpuResource.hpp
core/src/assets/: Asset.cpp  Asset.hpp  AssetID.hpp  AssetLoader.hpp  AssetManager.cpp  AssetManager.hpp  AssetManager.tpp  AssetMetaData.hpp  AssetModule.cpp  AssetModule.hpp  AssetModule.tpp  AssetPath.cpp  AssetPath.hpp  AssetRegistry.cpp  AssetRegistry.hpp  AssetServer.cpp  AssetServer.hpp  Gltf.hpp  Handle.hpp  ModelImporter.cpp  ModelImporter.hpp  SceneImporter.cpp  SceneImporter.hpp  ShaderCache.cpp  ShaderCache.hpp  ShaderImporter.cpp  ShaderImporter.hpp  TextureImporter.cpp  TextureImporter.hpp  asset.hpp  asset_id.hpp  asset_path.cpp  asset_path.hpp  asset_server.hpp  gltf.hpp
core/src/assets/importers/: ImportContext.cpp  ImportContext.hpp  MeshImporter.cpp  MeshImporter.hpp  ModelImporter.cpp  ModelImporter.hpp  SceneImporter.cpp  SceneImporter.hpp  ShaderImporter.cpp  ShaderImporter.hpp  TextureImporter.cpp  TextureImporter.hpp
core/src/assets/loaders/: AssetLoader.hpp  GltfLoader.cpp  ImageLoader.cpp  ShaderLoader.cpp  asset_loader.hpp  gltf_loader.cpp  image_loader.cpp  shader_loader.cpp
core/src/core/: App.cpp  App.hpp  Application.cpp  Application.hpp  Core.cpp  Core.hpp  Debug.cpp  Debug.hpp  DebugLayer.cpp  DebugLayer.hpp  Error.hpp  ErrorCode.hpp  FileSystem.cpp  FileSystem.hpp  FileSystemManager.cpp  FileSystemManager.hpp  GL.hpp  HashedString.hpp  Input.cpp  Input.hpp  InputCodes.hpp  Layer.cpp  Layer.hpp  Locator.hpp  Logger.hpp  Module.hpp  Option.hpp  PathRegistry.cpp  PathRegistry.hpp  Profiler.cpp  Profiler.hpp  Result.hpp  RwLock.hpp  SirenAssert.hpp  TaskPool.cpp  TaskPool.hpp  ThreadPool.cpp  ThreadPool.hpp  Time.cpp  Time.hpp  (+20 more)
core/src/ecs/: Components.hpp  ModelComponent.hpp  Systems.hpp  world.hpp
core/src/event/: AppEvent.hpp  Event.hpp  KeyEvent.hpp  MouseKeyEvent.hpp  MouseScrollEvent.hpp  WindowEvent.hpp
core/src/events/: Event.hpp  EventBus.cpp  EventBus.hpp  Events.hpp  KeyEvent.hpp  MouseEvent.hpp  MouseKeyEvent.hpp  WindowEvent.hpp
core/src/filesystem/: FileSystemManager.cpp  FileSystemManager.hpp  FileSystemModule.cpp  FileSystemModule.hpp
core/src/geometry/: Camera.cpp  Camera.hpp  Lights.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshGroup.cpp  MeshGroup.hpp  Model.cpp  Model.hpp  Primitive.cpp  Primitive.hpp  PrimitiveMesh.cpp  PrimitiveMesh.hpp  SubMesh.cpp  SubMesh.hpp  VertexBufferBuilder.cpp  VertexBufferBuilder.hpp  mesh.hpp  primitive.cpp  primitive.hpp  vertex_buffer_builder.cpp  vertex_buffer_builder.hpp
core/src/input/: Input.hpp  InputCodes.hpp  InputModule.cpp  InputModule.hpp  input.hpp  input_codes.hpp  input_module.cpp  input_module.hpp
core/src/reflection/: Reflect.hpp  typename.hpp
core/src/renderer/: Buffer.cpp  Buffer.hpp  Device.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GPULight.cpp  GPULight.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  IndexBuffer.cpp  IndexBuffer.hpp  PBRMaterial.cpp  PBRMaterial.hpp  RenderDevice.hpp  RenderInfo.cpp  RenderInfo.hpp  RenderModule.cpp  RenderModule.hpp  RenderResource.hpp  Renderer.cpp  Renderer.hpp  SceneRenderer.cpp  SceneRenderer.hpp  Shader.cpp  Shader.hpp  ShaderUtils.hpp  Shaders.cpp  Shaders.hpp  Texture.cpp  Texture.hpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp  VertexLayout.cpp  VertexLayout.hpp  command_buffer.hpp  device.hpp  (+17 more)
core/src/scene/: Camera.cpp  Camera.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Scene.cpp  Scene.hpp
core/src/script/: NativeScript.hpp
core/src/secs/: Component.hpp  ComponentList.hpp  ComponentManager.hpp  Entity.hpp  EntityManager.hpp  Scene.hpp  System.hpp  SystemManager.hpp  secsAssert.hpp  secsTypes.hpp
core/src/serialization/: SceneSerializer.hpp  Serializer.hpp
core/src/sync/: condition_variable.hpp  guard.hpp  mutex.hpp  render_thread.cpp  render_thread.hpp  rw_lock.hpp  task_pool.cpp  task_pool.hpp  thread_pool.cpp  thread_pool.hpp
core/src/time/: TimeModule.cpp  TimeModule.hpp  Timer.cpp  Timer.hpp
core/src/ui/: ColorSchemes.hpp  ImGui.hpp  UI.cpp  UI.hpp  UIRenderer.cpp  UIRenderer.hpp  UiManager.cpp  UiManager.hpp  ui.cpp  ui.hpp
core/src/utilities/: Functions.hpp  IDGenerator.hpp  ImGui.hpp  SirenAssert.hpp  Types.hpp  UUID.cpp  UUID.hpp  className.hpp  glad.cpp  sobj.cpp  spch.cpp  spch.hpp  string_mappings.hpp  types.hpp  uuid.cpp  uuid.hpp
core/src/window/: Window.hpp  WindowModule.cpp  WindowModule.hpp  window.hpp  window_module.cpp  window_module.hpp
demo/: CMakeLists.txt  DebugLayer.cpp  DebugLayer.hpp  TestLayer.cpp  TestLayer.hpp  main.cpp
demo/scripts/: PlayerController.cpp  ThirdPersonCamera.cpp  ThirdPersonCamera.hpp
editor/: CMakeLists.txt
editor/src/: EditorApp.cpp  EditorApp.hpp  EditorCamera.cpp  EditorCamera.hpp  EditorContextComponent.hpp  EditorLayer.cpp  EditorLayer.hpp  EditorState.hpp  GuiMeta.cpp  GuiMeta.hpp  MetaRegistry.cpp  MetaRegistry.hpp  SceneViewRenderer.cpp  SceneViewRenderer.hpp  main.cpp
editor/src/dockspace/: DockSpace.cpp  DockSpace.hpp
editor/src/panel/: InspectorPanel.cpp  InspectorPanel.hpp  MaterialEditorPanel.cpp  MaterialEditorPanel.hpp  Panel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp  SceneViewPanel.cpp  SceneViewPanel.hpp
editor/src/scripts/: PlayerController.cpp  PlayerController.hpp  ThirdPersonCamera.cpp
editor/src/static-ui/: StaticUi.cpp  StaticUi.hpp
editor/src/widget/: EditorCameraPropertiesWidget.cpp  EditorCameraPropertiesWidget.hpp  MainMenuBar.cpp  MainMenuBar.hpp  Widget.hpp
sandbox/: CMakeLists.txt
sandbox/src/: SandboxApp.cpp  SandboxApp.hpp  main.cpp
sandbox/src/scripts/: PlayerController.cpp  ThirdPersonCamera.cpp  ThirdPersonCamera.hpp
siren/: CMakeLists.txt  DebugLayer.cpp  DebugLayer.hpp  TestLayer.cpp  TestLayer.hpp  main.cpp
siren/scripts/: ThirdPersonCamera.cpp  ThirdPersonCamera.hpp
(+205 files in other folders)
